# d2i-tool2-research

./: README.md  pyproject.toml
docs/code-export/: README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  dill.ipynb  inspect.ipynb  read-notebook.ipynb
